--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^8.2.0",
     "express": "^4.16.4",
+    "mongoose": "^5.7.6",
     "socket.io": "^2.2.0"
   },
   "devDependencies": {
